--- a/projects/4-drag-it/src/index.html
+++ b/projects/4-drag-it/src/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Перетаскивай это</title>
 </head>
-<body>
-  
+<body class="page">
+  <div class="circle" id="circle"></div>
 </body>
 </html>
